// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on desktop renders correctly 1`] = `
<div
  className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox-sc-18frc3o-0 dhjTiw eSUepw"
>
  <div
    className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-sc-18frc3o-1  deWHaO container"
  >
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 cihlnc crVXXX"
    >
      <p
        className="sc-bdnylx dCXhMr"
      >
        
      </p>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 lmAIgj dzUdRG"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <button
          aria-controls="popover-overlay"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton-sc-1t1mb78-0 dOSxvR"
          onClick={[Function]}
          onClickCapture={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
          />
          global.for
        </button>
        <div
          aria-label="vote.popover.title"
          className="sc-bdnylx LoginOverlay__PopoverContainer-c0lhnx-0 cNFNYl rLblB"
          data-dialog={true}
          hidden={true}
          id="login-popover"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "position": "fixed",
              "top": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            className="sc-bdnylx LoginOverlay__Arrow-c0lhnx-2 kGqIZa hoKyqX"
            style={
              Object {
                "bottom": "100%",
                "fontSize": 30,
                "height": "1em",
                "pointerEvents": "none",
                "width": "1em",
              }
            }
          >
            <svg
              style={
                Object {
                  "transform": "rotateZ(360deg)",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                className="stroke"
                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
              />
              <path
                className="fill"
                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
              />
            </svg>
          </div>
          <div
            className="sc-bdnylx eWkbGr"
          >
            <p
              className="sc-bdnylx YLtjJ"
            >
              vote.popover.title
            </p>
            <div
              className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 kIsWfm cRYDhl"
            >
              <p
                className="sc-bdnylx jEhuac"
              >
                vote.popover.body
              </p>
              <span
                className="sc-bdnylx bgIGJQ"
                clip="rect(0px, 0px, 0px, 0px)"
              >
                <button
                  className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 khpBZc gQREUn"
                  onClick={[Function]}
                  type="button"
                >
                  global.close
                </button>
              </span>
              <span
                style={Object {}}
              >
                <button
                  aria-label="open.connection_modal"
                  className="center-block btn-block login-button btn btn-success"
                  destination="http://localhost"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  global.login
                </button>
              </span>
            </div>
          </div>
        </div>
        <button
          aria-controls="popover-overlay"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton2-sc-1t1mb78-1 kZJOtr"
          onClick={[Function]}
          onClickCapture={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
          />
          global.against
        </button>
        <div
          aria-label="vote.popover.title"
          className="sc-bdnylx LoginOverlay__PopoverContainer-c0lhnx-0 cNFNYl rLblB"
          data-dialog={true}
          hidden={true}
          id="login-popover"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "position": "fixed",
              "top": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            className="sc-bdnylx LoginOverlay__Arrow-c0lhnx-2 kGqIZa hoKyqX"
            style={
              Object {
                "bottom": "100%",
                "fontSize": 30,
                "height": "1em",
                "pointerEvents": "none",
                "width": "1em",
              }
            }
          >
            <svg
              style={
                Object {
                  "transform": "rotateZ(360deg)",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                className="stroke"
                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
              />
              <path
                className="fill"
                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
              />
            </svg>
          </div>
          <div
            className="sc-bdnylx eWkbGr"
          >
            <p
              className="sc-bdnylx YLtjJ"
            >
              vote.popover.title
            </p>
            <div
              className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 kIsWfm cRYDhl"
            >
              <p
                className="sc-bdnylx jEhuac"
              >
                vote.popover.body
              </p>
              <span
                className="sc-bdnylx bgIGJQ"
                clip="rect(0px, 0px, 0px, 0px)"
              >
                <button
                  className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 khpBZc gQREUn"
                  onClick={[Function]}
                  type="button"
                >
                  global.close
                </button>
              </span>
              <span
                style={Object {}}
              >
                <button
                  aria-label="open.connection_modal"
                  className="center-block btn-block login-button btn btn-success"
                  destination="http://localhost"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  global.login
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on desktop renders correctly when argumented 1`] = `
<div
  className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox-sc-18frc3o-0 dhjTiw eSUepw"
>
  <div
    className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-sc-18frc3o-1  deWHaO container"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 eXWFqf"
      >
        <span
          aria-label="vote"
          className="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
          role="img"
        >
          🎉
        </span>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "thanks-for-debate-richer",
            }
          }
        />
        <button
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
          onClick={[Function]}
          type="button"
        >
          delete.vote.against
        </button>
      </div>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fXlkxX hmLkpw"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
          allowFullScreen={true}
          frameBorder="0"
          height="20"
          scrolling="no"
          src="https://www.facebook.com/plugins/share_button.php?href=/debate/pour-ou-contre&layout=button_count&size=small&width=91&height=20&appId"
          style={
            Object {
              "border": "none",
              "overflow": "hidden",
            }
          }
          title="facebook share button"
          width="91"
        />
        <a
          className="twitter-share-button"
          data-show-count="false"
          href="https://twitter.com/share?ref_src=twsrc%5Etfw"
        >
          Tweet
        </a>
        <button
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cRPoGN gQREUn"
          onClick={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 kGTwVK gtEoKs KA-deO icon"
          />
          global.link
        </button>
        <div
          className="sc-bdnylx jDkTpd Tooltip__TooltipInner-xw2xlw-0 jyDVSs"
          style={
            Object {
              "opacity": 0,
              "transform": "scale(0.8) translateZ(0)",
            }
          }
        >
          <p
            className="sc-bdnylx hIgmxG"
            title="copied-link"
          >
            copied-link
          </p>
          <div
            className="sc-bdnylx Tooltip__Arrow-xw2xlw-1 Tooltip___StyledArrow-xw2xlw-2  jipOxN hWNQFr"
            data-popper-arrow={true}
            id="arrow"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on desktop renders correctly when voted 1`] = `
<div
  className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox-sc-18frc3o-0 dhjTiw gBGgFy"
>
  <div
    className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-sc-18frc3o-1  deWHaO container"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 eXWFqf"
      >
        <span
          aria-label="vote"
          className="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
          role="img"
        >
          🗳️
        </span>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "thanks-for-your-vote",
            }
          }
        />
        <button
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
          onClick={[Function]}
          type="button"
        >
          delete.vote.against
        </button>
      </div>
      <div
        className="sc-bdnylx dJHjFW DebateStepPageVoteForm___StyledCard-sc-89or92-3 gXzbu"
      >
        <form
          className="DebateStepPageVoteForm__Form-sc-89or92-0 cEBedW"
          disabled={false}
          id="debate-argument-form"
          onSubmit={[Function]}
        >
          <div
            className="form-group"
          >
            <textarea
              aria-describedby="body-error "
              aria-invalid={false}
              autoComplete="off"
              autoFocus={false}
              className="form-control"
              id="body"
              minLength="1"
              name="body"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="why-are-you-against"
              type="textarea"
              value=""
              warnings={null}
            />
            <div
              className="Notepad__Container-zxztj1-0 dDbxVX visible-print-block"
            >
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on mobile renders correctly 1`] = `
<div
  className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox-sc-18frc3o-0 fpYjMC eSUepw"
>
  <div
    className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-sc-18frc3o-1  deWHaO container"
  >
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 cihlnc crVXXX"
    >
      <p
        className="sc-bdnylx dCXhMr"
      >
        
      </p>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 lmAIgj dzUdRG"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <button
          aria-controls="popover-overlay"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton-sc-1t1mb78-0 dOSxvR"
          onClick={[Function]}
          onClickCapture={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
          />
          global.for
        </button>
        <div
          aria-label="vote.popover.title"
          className="sc-bdnylx LoginOverlay__PopoverContainer-c0lhnx-0 cNFNYl rLblB"
          data-dialog={true}
          hidden={true}
          id="login-popover"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "position": "fixed",
              "top": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            className="sc-bdnylx LoginOverlay__Arrow-c0lhnx-2 hvAiyy khTqzW"
            style={
              Object {
                "fontSize": 30,
                "height": "1em",
                "pointerEvents": "none",
                "top": "100%",
                "width": "1em",
              }
            }
          >
            <svg
              style={
                Object {
                  "transform": "rotateZ(180deg)",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                className="stroke"
                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
              />
              <path
                className="fill"
                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
              />
            </svg>
          </div>
          <div
            className="sc-bdnylx eWkbGr"
          >
            <p
              className="sc-bdnylx YLtjJ"
            >
              vote.popover.title
            </p>
            <div
              className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 kIsWfm cRYDhl"
            >
              <p
                className="sc-bdnylx jEhuac"
              >
                vote.popover.body
              </p>
              <span
                className="sc-bdnylx bgIGJQ"
                clip="rect(0px, 0px, 0px, 0px)"
              >
                <button
                  className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 khpBZc gQREUn"
                  onClick={[Function]}
                  type="button"
                >
                  global.close
                </button>
              </span>
              <span
                style={Object {}}
              >
                <button
                  aria-label="open.connection_modal"
                  className="center-block btn-block login-button btn btn-success"
                  destination="http://localhost"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  global.login
                </button>
              </span>
            </div>
          </div>
        </div>
        <button
          aria-controls="popover-overlay"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTWwWU gQREUn DebateStepPageVote___StyledButton2-sc-1t1mb78-1 kZJOtr"
          onClick={[Function]}
          onClickCapture={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 ldGFSW jSXedj KA-deO icon"
          />
          global.against
        </button>
        <div
          aria-label="vote.popover.title"
          className="sc-bdnylx LoginOverlay__PopoverContainer-c0lhnx-0 cNFNYl rLblB"
          data-dialog={true}
          hidden={true}
          id="login-popover"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "position": "fixed",
              "top": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            className="sc-bdnylx LoginOverlay__Arrow-c0lhnx-2 hvAiyy khTqzW"
            style={
              Object {
                "fontSize": 30,
                "height": "1em",
                "pointerEvents": "none",
                "top": "100%",
                "width": "1em",
              }
            }
          >
            <svg
              style={
                Object {
                  "transform": "rotateZ(180deg)",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                className="stroke"
                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
              />
              <path
                className="fill"
                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
              />
            </svg>
          </div>
          <div
            className="sc-bdnylx eWkbGr"
          >
            <p
              className="sc-bdnylx YLtjJ"
            >
              vote.popover.title
            </p>
            <div
              className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 kIsWfm cRYDhl"
            >
              <p
                className="sc-bdnylx jEhuac"
              >
                vote.popover.body
              </p>
              <span
                className="sc-bdnylx bgIGJQ"
                clip="rect(0px, 0px, 0px, 0px)"
              >
                <button
                  className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 khpBZc gQREUn"
                  onClick={[Function]}
                  type="button"
                >
                  global.close
                </button>
              </span>
              <span
                style={Object {}}
              >
                <button
                  aria-label="open.connection_modal"
                  className="center-block btn-block login-button btn btn-success"
                  destination="http://localhost"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  global.login
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on mobile renders correctly when argumented 1`] = `
<div
  className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox-sc-18frc3o-0 dhjTiw eSUepw"
>
  <div
    className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-sc-18frc3o-1  deWHaO container"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 eXWFqf"
      >
        <span
          aria-label="vote"
          className="DebateStepPageVoteForm___StyledSpan2-sc-89or92-2 gBdWGG"
          role="img"
        >
          🎉
        </span>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "thanks-for-debate-richer",
            }
          }
        />
        <button
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 jNKdvh kiIbCx"
          onClick={[Function]}
          type="button"
        >
          delete.vote.against
        </button>
      </div>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 fXlkxX hmLkpw"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
          allowFullScreen={true}
          frameBorder="0"
          height="20"
          scrolling="no"
          src="https://www.facebook.com/plugins/share_button.php?href=/debate/pour-ou-contre&layout=button_count&size=small&width=91&height=20&appId"
          style={
            Object {
              "border": "none",
              "overflow": "hidden",
            }
          }
          title="facebook share button"
          width="91"
        />
        <a
          className="twitter-share-button"
          data-show-count="false"
          href="https://twitter.com/share?ref_src=twsrc%5Etfw"
        >
          Tweet
        </a>
        <button
          className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cRPoGN gQREUn"
          onClick={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnylx Icon__IconInner-sc-19k5t1s-0 Icon___StyledIconInner-sc-19k5t1s-1 kGTwVK gtEoKs KA-deO icon"
          />
          global.link
        </button>
        <div
          className="sc-bdnylx jDkTpd Tooltip__TooltipInner-xw2xlw-0 jyDVSs"
          style={
            Object {
              "opacity": 0,
              "transform": "scale(0.8) translateZ(0)",
            }
          }
        >
          <p
            className="sc-bdnylx hIgmxG"
            title="copied-link"
          >
            copied-link
          </p>
          <div
            className="sc-bdnylx Tooltip__Arrow-xw2xlw-1 Tooltip___StyledArrow-xw2xlw-2  jipOxN hWNQFr"
            data-popper-arrow={true}
            id="arrow"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on mobile renders correctly when voted 1`] = `
<div
  className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox-sc-18frc3o-0 fpYjMC eSUepw"
>
  <div
    className="sc-bdnylx DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-sc-18frc3o-1  deWHaO container"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 eXWFqf"
      >
        <p
          className="sc-bdnylx dzpbOH"
        >
          <span
            aria-label="vote"
            className="DebateStepPageVoteForm___StyledSpan-sc-89or92-1 bypLWg"
            role="img"
          >
            🗳️
          </span>
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "thanks-for-your-vote",
              }
            }
          />
        </p>
      </div>
      <button
        className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cWJmph haoEhH"
        onClick={[Function]}
        type="button"
      >
        publish-argument
      </button>
    </div>
  </div>
</div>
`;
